--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                     <img src="Zigzagoon.jpeg" alt="Zigzagoon" height="65" width="100" title="Zigzagoon" >
                     Zigzagoon : 1<br>
             
-                    <a href="http://127.0.0.1:5500/Zigzagoon.html" target=" _self"> 
+                    <a href="Zigzagoon.html" target=" _self"> 
                         <button style="cursor: grab;"> Information </button>     
                     </a>
                      <br>
                      
                     <img src="Pikachu.jpeg" alt="Pikachu" height="85" width="100" title="Pikachu"> 
                     Pikachu : 1     <br>
-                    <a href="http://127.0.0.1:5500/Zigzagoon.html" target=" _self"> 
+                    <a href="Zigzagoon.html" target=" _self"> 
                         <button 
                             style="cursor: grab;"> Information  
                         </button>     
@@ -102,7 +102,7 @@
                     <br>
                     <img src="surskit.jpg" alt="Surskit" height="85" width="100" title="Surskit">
                     Surskit : 1 <br>    
-                    <a href="http://127.0.0.1:5500/Zigzagoon.html" target=" _self"> 
+                    <a href="Zigzagoon.html" target=" _self"> 
                         <button style="cursor: grab;"> Information </button>     
                     </a>
                     <br>
