--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <u> Speed </u>
                  <p> 
                     
-                    <img src="Zigzagoon.jpeg" alt="Zigzagoon" height="65" width="100" title="Zigzagoon" >
+                    <img src="zigzagoon.jpeg" alt="Zigzagoon" height="65" width="100" title="Zigzagoon" >
                     Zigzagoon : 1<br>
             
                     <a href="Zigzagoon.html" target=" _self"> 
