--- a/zigzagoon.html
+++ b/zigzagoon.html
@@ -58,7 +58,7 @@
     </p>
     
     <hr>
-    <a href="http://127.0.0.1:5500/ZigMove.html" target=" _self"> 
+    <a href="http://127.0.0.1:5500/zSigMove.html" target=" _self"> 
         <button style="cursor: grab;"> Moves </button>     
     </a>
 
