--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                 <u> Speed </u>
                  <p> 
                     
-                    <img src="zigzagoon.jpeg" alt="Zigzagoon" height="65" width="100" title="Zigzagoon" >
+                    <img src="Zigzagoon.jpeg" alt="Zigzagoon" height="65" width="100" title="Zigzagoon" >
                     Zigzagoon : 1<br>
             
-                    <a href="Zigzagoon.html" target=" _self"> 
+                    <a href="zigzagoon.html" target=" _self"> 
                         <button style="cursor: grab;"> Information </button>     
                     </a>
                      <br>
