--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <img src="Zigzagoon.jpeg" alt="Zigzagoon" height="65" width="100" title="Zigzagoon" >
                     Zigzagoon : 1<br>
             
-                    <a href="zigzagoon.html" target=" _self"> 
+                    <a href="zigzagoon.html"> 
                         <button style="cursor: grab;"> Information </button>     
                     </a>
                      <br>
