--- a/zigzagoon.html
+++ b/zigzagoon.html
@@ -58,7 +58,7 @@
     </p>
     
     <hr>
-    <a href="zigMove.html" target=" _self"> 
+    <a href="zigMove.html"> 
         <button style="cursor: grab;"> Moves </button>     
     </a>
 
