--- a/zigMove.html
+++ b/zigMove.html
@@ -17,7 +17,7 @@
     </button> 
     <p> 
         <h1> <u>Level Up</u></h1>
-        <a href="http://127.0.0.1:5500/Zigzagoon.html" target=" _self">     
+        <a href="growl.html">     
             <button style="background-color: white ; border-color: grey; color: black; "> 
                 Growl <b> Level 1</b>    
  
