--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <title>Radical Red EV grindng Spots </title>
 </head>
 <body>
+    <section> 
     <h1> <b> <u> <style type= 'text/css'>
         body{
         color:white;
         background-color: black} 
+        .mySection{
+            color: white;
+            background-color : green;
+        }
     </style> 
     Pokemon Radical Red </b> </u> </h1> 
+    </section>
+    <hr>
     <h3> 
-        <u> Ev Grinding Spots </u>
+    <u> Ev Grinding Spots </u>
     </h3>
     <hr> 
 
